--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,9 +1,10 @@
 ---
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import '../styles/global.css';
-const {pageTitle} = Astro.props;
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+import "../styles/global.css";
+const { pageTitle } = Astro.props;
 ---
+
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -15,7 +16,7 @@ const {pageTitle} = Astro.props;
   <body>
     <Header />
     <h1>{pageTitle}</h1>
-    <slot/>
+    <slot />
     <Footer />
     <script>
       import "../scripts/menu.js";
